--- a/src/components/sections/Education.css
+++ b/src/components/sections/Education.css
@@ -74,8 +74,8 @@
 }
 
 .timeline-icon {
-  background-color: #9b87f5;
-  color: white;
+  background-color: #0f0346;
+  color: rgb(0, 0, 0);
   width: 40px;
   height: 40px;
   border-radius: 50%;
