--- a/src/components/sections/Education.css
+++ b/src/components/sections/Education.css
@@ -27,7 +27,7 @@
 .timeline::after {
   content: '';
   position: absolute;
-  width: 2px;
+  width: px;
   background-color: #9b87f5;
   top: 0;
   bottom: 0;
@@ -51,10 +51,11 @@
   width: 20px;
   height: 20px;
   background-color: #1A1F2C;
-  border: 4px solid #fb0000;
+  border: 2px solid #9b87f5;
   border-radius: 50%;
   top: 25px;
   z-index: 1;
+  transform: translateX(-50%);
 }
 
 .left-container {
