--- a/src/components/sections/Education.css
+++ b/src/components/sections/Education.css
@@ -47,7 +47,7 @@
 
 .timeline-container::after {
   content: '';
-  /* position: absolute; */
+  position: relative;
   width: 20px;
   height: 20px;
   background-color: #1A1F2C;
