--- a/src/components/sections/Projects.css
+++ b/src/components/sections/Projects.css
@@ -18,11 +18,13 @@
   color: var(--primary);
   position: relative;
   display: inline-block;*/
-  text-align: center;
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+  font-size: 2.5rem;
   font-weight: 700;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
+  text-align: center;
+  background: linear-gradient(to right, #9b87f5, #E5DEFF);
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
 .projects-grid {
