fix animated text

--- a/src/components/sections/Hero.css
+++ b/src/components/sections/Hero.css
@@ -132,7 +132,7 @@
   line-height: 3.5rem;
   font-weight: 450;
   margin-bottom: 1.5rem;
-  background: linear-gradient(to right, #a19cb8, #E5DEFF);
+  background: linear-gradient(to right, #6f57da, #453481);
   -webkit-background-clip: text;
   /*color: transparent;*/
   transform: translateZ(15px);
