--- a/src/components/sections/Hero.css
+++ b/src/components/sections/Hero.css
@@ -132,10 +132,9 @@
   line-height: 3.5rem;
   font-weight: 450;
   margin-bottom: 1.5rem;
-  background: linear-gradient(to right, #6f57da, #453481);
+  background: linear-gradient(to right, #9b87f5, #E5DEFF);
   -webkit-background-clip: text;
-  color: linear-gradient(to right, #9b87f5, #E5DEFF);
-  color: #9b87f5;
+  color: transparent;
   transform: translateZ(15px);
   animation: textFloat 3s ease-in-out infinite;
 }
